--- a/mysite/static/css/stash.css
+++ b/mysite/static/css/stash.css
@@ -14,6 +14,7 @@
     font-style: normal;
 }
 
+
 .gallery-block{
 	padding-bottom: 60px;
 	padding-top: 60px;
@@ -26,6 +27,7 @@
 }
 
 .gallery-block .heading h2{
+    color: white;
     font-weight: bold;
     font-size: 3rem;
     text-transform: uppercase;
