Adapted homepage.html

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/homepage_new.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/homepage_new.html
@@ -38,7 +38,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">JourneyWithJed</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -79,7 +79,7 @@
         <div class="col-lg-10 mx-auto">
           <h2>Curious to find out more about your conversations with your loved ones?</h2>
           <p class="lead mb-5">Let simple analytics and data from your chat logs tell the story.</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#features">What We Offer</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#features">What We Measure</a>
         </div>
       </div>
     </div>
@@ -101,34 +101,34 @@
           <h4>
             <strong>Engagement</strong>
           </h4>
-          <p class="text-faded mb-0">Measuring message counts!</p>
+          <p class="text-faded mb-0">...through message frequency!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
+            <i class="icon-heart"></i>
           </span>
           <h4>
             <strong>Expressiveness</strong>
           </h4>
-          <p class="text-faded mb-0">Revealed through word counts.</p>
+          <p class="text-faded mb-0">...through words and media!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
+            <i class="icon-hourglass"></i>
           </span>
           <h4>
             <strong>Responsiveness</strong>
           </h4>
-          <p class="text-faded mb-0">Through figures and graphs on reply timings.</p>
+          <p class="text-faded mb-0">...through reply timings!</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
+            <i class="icon-eye"></i>
           </span>
           <h4>
-            <strong>Coming Soon</strong>
+            <strong>Visualized</strong>
           </h4>
-          <p class="text-faded mb-0">Coming Soon...</p>
+          <p class="text-faded mb-0">...through charts and graphs</p>
         </div>
       </div>
       <h2>&zwnj;</h2>
@@ -142,7 +142,7 @@
   <!-- Callout -->
   <section class="callout" id="callout">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Analysis Time</h2>
+      <h2 class="mx-auto mb-5">Your Chat File</h2>
       <!--USER FILE UPLOAD FORM-->
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -283,44 +283,44 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://github.com/weilunn97/Email-Fraud-NLP-" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Email Fraud Detection</h2>
+                <p class="mb-0">NLP-based binary classifier, deployed on actual email content!</p>
               </span>
             </span>
             <img class="img-fluid" src="{% static  'img/portfolio-1.jpg' %}" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://github.com/weilunn97/WhatsAnalyzer-Android-" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>WhatsAnalyzer Android</h2>
+                <p class="mb-0">The Android version of this very site! Enjoy WhatsAnalyzer across your devices!</p>
               </span>
             </span>
             <img class="img-fluid" src="{% static  'img/portfolio-2.jpg' %}" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://github.com/weilunn97/WhatsAnalyzer--Django-" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2>WhatsAnalyzer Web</h2>
+                <p class="mb-0">The exact project that you're seeing right now!</p>
               </span>
             </span>
             <img class="img-fluid" src="{% static  'img/portfolio-3.jpg' %}" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://github.com/weilunn97/CustomerReviewsClassifier-NLP-" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Customer Ratings Classifier</h2>
+                <p class="mb-0">A NLP-based multinomial classifier on e-commerce customers' comments!</p>
               </span>
             </span>
             <img class="img-fluid" src="{% static  'img/portfolio-4.jpg' %}" alt="">
@@ -333,12 +333,11 @@
   <!-- Call to Action -->
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
-      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+      <h2 class="mb-4">IF YOU LOVED WHATSANALYZER...</h2>
+      <a href="https://github.com/weilunn97/WhatsAnalyzer--Django-" class="btn btn-xl btn-light mr-4">Give a Star!</a>
+      <a href="https://github.com/weilunn97/WhatsAnalyzer--Django-.git" class="btn btn-xl btn-dark">Let Me Contribute!</a>
     </div>
   </section>
-
 
 
   <!-- Footer -->
@@ -346,18 +345,18 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-facebook"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/tan-wei-lun/" target="_blank">
+            <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#">
+          <a class="social-link rounded-circle text-white mr-3" href="https://github.com/weilunn97" target="_blank">
             <i class="icon-social-github"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/frymeee/" target="_blank">
+            <i class="icon-social-instagram"></i>
           </a>
         </li>
       </ul>
