--- a/mysite/whatsanalyzer/templates/whatsanalyzer/stash_new.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/stash_new.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 {% load static %}
 
 <html>
@@ -11,7 +10,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
     <link rel="stylesheet" href="{% static 'css/stash.css' %}">
-	<link rel="stylesheet" href="{% static 'css/centre_spinner.css' %}">
+	<link rel="stylesheet" href="{% static 'css/centre_spinloader.css' %}">
+	<script src="{% static 'js/metrics_on_click.js' %}"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-auth.js"></script>
@@ -56,7 +56,7 @@
 	                		<img src="{% static 'img/card1.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name1">Lorem Ipsum</a></h6>
+	                        <h6><a id="name1"></a></h6>
 	                        <p id="date1" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -68,7 +68,7 @@
 	                		<img src="{% static 'img/card2.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name2">Lorem Ipsum</a></h6>
+	                        <h6><a id="name2"></a></h6>
 	                        <p id="date2" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -80,7 +80,7 @@
 	                		<img src="{% static 'img/card3.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name3">Lorem Ipsum</a></h6>
+	                        <h6><a id="name3"></a></h6>
 	                        <p id="date3" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -92,7 +92,7 @@
 	                		<img src="{% static 'img/card4.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name4">Lorem Ipsum</a></h6>
+	                        <h6><a id="name4"></a></h6>
 	                        <p id="date4" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -104,7 +104,7 @@
 	                		<img src="{% static 'img/card5.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name5">Lorem Ipsum</a></h6>
+	                        <h6><a id="name5"></a></h6>
 	                        <p id="date5" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -116,7 +116,7 @@
 	                		<img src="{% static 'img/card6.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name6">Lorem Ipsum</a></h6>
+	                        <h6><a id="name6"></a></h6>
 	                        <p id="date6" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -128,7 +128,7 @@
 	                		<img src="{% static 'img/card7.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h7><a id="name7">Lorem Ipsum</a></h7>
+	                        <h7><a id="name7"></a></h7>
 	                        <p id="date7" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -140,7 +140,7 @@
 	                		<img src="{% static 'img/card8.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h8><a id="name8">Lorem Ipsum</a></h8>
+	                        <h8><a id="name8"></a></h8>
 	                        <p id="date8" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -152,7 +152,7 @@
 	                		<img src="{% static 'img/card9.jpg' %}" alt="Card card" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a id="name9">Lorem Ipsum</a></h6>
+	                        <h6><a id="name9"></a></h6>
 	                        <p id="date9" class="text-muted card-text"></p>
 	                    </div>
 	                </div>
@@ -206,7 +206,6 @@
 				expires = "; expires=" + date.toUTCString();
 			}
 			document.cookie = name + "=" + (value || "")  + expires + "; path=/";
-			alert("COOKIE SET : " + document.cookie);
 		}
 
 		// GET CURRENT USER'S NAME VIA COOKIE
@@ -225,8 +224,6 @@
 				fileList.push(itemRef);
 			});
 
-<!--			// DEBUG AND CHECK IF FILES ARE THERE-->
-<!--			alert(fileList.join("\n"));-->
 
 			// POPULATE THE LISTVIEW
 			var historyListView = document.getElementById('historyListView');
@@ -265,14 +262,14 @@
 
 		// CARD VIEW 1 ONCLICK
 		function card1Click() {
-<!--			alert("Card 1");-->
 			var fileRef = folderRef.child(textFileNames[0]);
 			fileRef.getDownloadURL().then(function(url) {
 				var xhr = new XMLHttpRequest();
 				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
 				xhr.onload = function(event) {
 					var textFile = xhr.response;
-
 					$.ajax({
 					  url: 'http://127.0.0.1:8000/metrics/',
 					  type: 'POST',
@@ -285,12 +282,7 @@
 						console.log(result);
 					  }
 					});
-
-
-
 				};
-				xhr.open('GET', url);
-  				xhr.send();
 			}).catch(function(error) {
 				alert(error.code);
 			});
@@ -298,45 +290,227 @@
 
 		// CARD VIEW 2 ONCLICK
 		function card2Click() {
-			alert("Card 2");
+			var fileRef = folderRef.child(textFileNames[1]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 3 ONCLICK
 		function card3Click() {
-			alert("Card 3");
+			var fileRef = folderRef.child(textFileNames[2]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 4 ONCLICK
 		function card4Click() {
-			alert("Card 4");
+			var fileRef = folderRef.child(textFileNames[3]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 5 ONCLICK
 		function card5Click() {
-			alert("Card 5");
+			var fileRef = folderRef.child(textFileNames[4]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 6 ONCLICK
 		function card6Click() {
-			alert("Card 6");
+			var fileRef = folderRef.child(textFileNames[5]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 7 ONCLICK
 		function card7Click() {
-			alert("Card 7");
+			var fileRef = folderRef.child(textFileNames[6]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 8 ONCLICK
 		function card8Click() {
-			alert("Card 8");
+			var fileRef = folderRef.child(textFileNames[7]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
 
 		// CARD VIEW 9 ONCLICK
 		function card9lick() {
-			alert("Card 9");
+			var fileRef = folderRef.child(textFileNames[8]);
+			fileRef.getDownloadURL().then(function(url) {
+				var xhr = new XMLHttpRequest();
+				xhr.responseType = 'text';
+				xhr.open('GET', url);
+  				xhr.send();
+				xhr.onload = function(event) {
+					var textFile = xhr.response;
+					$.ajax({
+					  url: 'http://127.0.0.1:8000/metrics/',
+					  type: 'POST',
+					  data: {'textFile': textFile},
+					  headers: {"X-CSRFToken":'{{ csrf_token }}'},
+					  success: function() {
+            			window.location.href = 'http://127.0.0.1:8000/metrics/';
+					  },
+					  error: function (result) {
+						console.log(result);
+					  }
+					});
+				};
+			}).catch(function(error) {
+				alert(error.code);
+			});
 		}
-
-
 </script>
 </body>
 </html>
