--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -7,13 +7,16 @@
 	<title>Full Motion</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="{% static 'css/metrics.css' %}" />
-	<script src="{% static 'js/jquery.min.js' %}"></script>
-	<script src="{% static 'js/jquery.scrolly.min.js' %}"></script>
-	<script src="{% static 'js/jquery.poptrox.min.js' %}"></script>
-	<script src="{% static 'js/skel.min.js' %}"></script>
-	<script src="{% static 'js/util.js' %}"></script>
-	<script src="{% static 'js/main.js' %}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+	<script  src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="{% static 'js/metrics.js' %}"></script>
+	<script src="{% static 'js/metrics.jquery.min.js' %}"></script>
+	<script src="{% static 'js/metrics.jquery.poptrox.min.js' %}"></script>
+	<script src="{% static 'js/metrics.jquery.scrolly.min.js' %}"></script>
+	<script src="{% static 'js/metrics.skel.min.js' %}"></script>
+	<script src="{% static 'js/metrics.util.js' %}"></script>
 </head>
 
 <body id="top">
@@ -32,6 +35,11 @@
 			<a class="more" href="#main">More</a>
 		</div>
 	</section>
+
+
+	<!--Navigation FAB-->
+	
+
 
 	<!-- Main -->
 	<div id="main">
