--- a/mysite/whatsanalyzer/templates/whatsanalyzer/chartsTemplate.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/chartsTemplate.html
@@ -6,7 +6,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-	<script src="{% static 'js/utils.js' %}"></script>
+	<script src="{% static 'js/charts.utils.js' %}"></script>
 	<style>
 		canvas {
 			-moz-user-select: none;
