--- a/mysite/whatsanalyzer/templates/whatsanalyzer/homepage.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/homepage.html
@@ -20,13 +20,14 @@
   <link href="{% static  'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static  'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
+
   <!-- Custom Fonts -->
   <link href="{% static  'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="{% static  'vendor/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/homepage.min.css' %}" rel="stylesheet">
 
 </head>
 
@@ -378,7 +379,7 @@
   <script src="{% static  'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
+  <script src="{% static 'js/homepage.min.js' %}"></script>
 
 </body>
 
