--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -25,7 +25,7 @@
 		its extension (eg. {% static 'img/banner.mp4' %}). Your video must be available in both .mp4 and .webm
 		formats to work correctly.
 	-->
-	<section id="banner"/>
+	<section id="banner">
 		<div class="inner">
 			<header>
 				<h1>Conversation Insights</h1>
@@ -35,10 +35,6 @@
 			<a class="more" href="#main">More</a>
 		</div>
 	</section>
-
-
-	<!--Navigation FAB-->
-	
 
 
 	<!-- Main -->
